add new website from server na

--- a/xem-phim-bo/toi-tu-bo-tu-cach-la-mot-anh-hung/index.html
+++ b/xem-phim-bo/toi-tu-bo-tu-cach-la-mot-anh-hung/index.html
@@ -1189,7 +1189,7 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
              Lượt xem:
             </dt>
             <dd class="movie-dd">
-             5
+             6
             </dd>
             <br/>
            </dl>
@@ -1669,18 +1669,18 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
        <div class="right-box-content">
         <ul class="list-top-movie" id="list-top-film-week">
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/nha-tuck-bat-tu" title="Nhà Tuck bất tử">
+          <a class="list-top-movie-link" href="/phim-moi/till-death" title="Till Death">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/nha-tuck-bat-tu-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/till-death-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Nhà Tuck bất tử
+             Till Death
             </span>
             <span class="list-top-movie-item-en">
-             Tuck Everlasting
+             Till Death
             </span>
             <span class="list-top-movie-item-view">
              2 lượt xem
@@ -1691,18 +1691,40 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/buoc-den-the-gioi-cua-em" title="Bước Đến Thế Giới Của Em">
+          <a class="list-top-movie-link" href="/phim-moi/tinh-nhu-mo-doi-nhu-mong" title="Tình Như Mơ Đời Như Mộng">
            <span class="status">
-            HD Vietsub
+            HD Thuyết Minh
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/buoc-den-the-gioi-cua-em-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/tinh-nhu-mo-doi-nhu-mong-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Bước Đến Thế Giới Của Em
+             Tình Như Mơ Đời Như Mộng
             </span>
             <span class="list-top-movie-item-en">
-             Unexpected
+             Beautifull Love, Wonderful Life
+            </span>
+            <span class="list-top-movie-item-view">
+             2 lượt xem
+            </span>
+            <span class="rate-vote rate-vote-0">
+            </span>
+           </div>
+          </a>
+         </li>
+         <li class="list-top-movie-item" id="list-top-movie-item-1">
+          <a class="list-top-movie-link" href="/phim-moi/quan-ca-phe-de-flore" title="Quán Cà Phê De Flore">
+           <span class="status">
+            HD Vietsub
+           </span>
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/quan-ca-phe-de-flore-thumb.jpg')">
+           </div>
+           <div class="list-top-movie-item-info">
+            <span class="list-top-movie-item-vn">
+             Quán Cà Phê De Flore
+            </span>
+            <span class="list-top-movie-item-en">
+             Café de Flore
             </span>
             <span class="list-top-movie-item-view">
              4 lượt xem
@@ -1713,21 +1735,21 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/noi-khong-voi-cai-ac" title="Nói Không Với Cái Ác">
+          <a class="list-top-movie-link" href="/phim-moi/moi-tinh-tay-ba" title="Mối Tình Tay Ba">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/noi-khong-voi-cai-ac-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/moi-tinh-tay-ba-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Nói Không Với Cái Ác
+             Mối Tình Tay Ba
             </span>
             <span class="list-top-movie-item-en">
-             Speak No Evil
+             The Unbearable Lightness of Being
             </span>
             <span class="list-top-movie-item-view">
-             1 lượt xem
+             0 lượt xem
             </span>
             <span class="rate-vote rate-vote-0">
             </span>
@@ -1735,40 +1757,18 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/ke-cap-con-gai" title="Kẻ Cắp Con Gái">
+          <a class="list-top-movie-link" href="/phim-moi/buong-dien-thoai" title="Buồng Điện Thoại">
            <span class="status">
-            HD Vietsub
+            HD Thuyết Minh
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/ke-cap-con-gai-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/buong-dien-thoai-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Kẻ Cắp Con Gái
+             Buồng Điện Thoại
             </span>
             <span class="list-top-movie-item-en">
-             Stolen Daughter
-            </span>
-            <span class="list-top-movie-item-view">
-             1 lượt xem
-            </span>
-            <span class="rate-vote rate-vote-0">
-            </span>
-           </div>
-          </a>
-         </li>
-         <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/biet-doi-diet-vong-phan-1" title="Biệt Đội Diệt Vong (Phần 1)">
-           <span class="status">
-            HD Vietsub
-           </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/biet-doi-diet-vong-phan-1-thumb.jpg')">
-           </div>
-           <div class="list-top-movie-item-info">
-            <span class="list-top-movie-item-vn">
-             Biệt Đội Diệt Vong (Phần 1)
-            </span>
-            <span class="list-top-movie-item-en">
-             Doom Patrol (Season 1)
+             Phone Booth
             </span>
             <span class="list-top-movie-item-view">
              2 lượt xem
