add new website from server na

--- a/xem-phim-moi/diem-bao-cua-quy/index.html
+++ b/xem-phim-moi/diem-bao-cua-quy/index.html
@@ -1187,7 +1187,7 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
              Lượt xem:
             </dt>
             <dd class="movie-dd">
-             1
+             3
             </dd>
             <br/>
            </dl>
@@ -1777,21 +1777,21 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
        <div class="right-box-content">
         <ul class="list-top-movie" id="list-top-film-week">
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/binh-tung-hiep-anh" title="Bình Tung Hiệp Ảnh">
+          <a class="list-top-movie-link" href="/phim-moi/mulan-2-the-final-war" title="Mulan 2: The Final War">
            <span class="status">
-            HD Lồng Tiếng
+            HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/binh-tung-hiep-anh-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/mulan-2-the-final-war-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Bình Tung Hiệp Ảnh
+             Mulan 2: The Final War
             </span>
             <span class="list-top-movie-item-en">
-             Heroic Legend
+             Mulan 2: The Final War
             </span>
             <span class="list-top-movie-item-view">
-             3 lượt xem
+             5 lượt xem
             </span>
             <span class="rate-vote rate-vote-0">
             </span>
@@ -1799,40 +1799,18 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/truy-cau" title="Truy Cầu">
+          <a class="list-top-movie-link" href="/phim-moi/dong-cung-tay-luoc" title="Đông Cung Tây Lược">
            <span class="status">
-            HD Vietsub
+            HD Thuyết Minh
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/truy-cau-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/dong-cung-tay-luoc-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Truy Cầu
+             Đông Cung Tây Lược
             </span>
             <span class="list-top-movie-item-en">
-             Chasing Love
-            </span>
-            <span class="list-top-movie-item-view">
-             2 lượt xem
-            </span>
-            <span class="rate-vote rate-vote-0">
-            </span>
-           </div>
-          </a>
-         </li>
-         <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/marcella-phan-1" title="Marcella (Phần 1)">
-           <span class="status">
-            HD Vietsub
-           </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/marcella-phan-1-thumb.jpg')">
-           </div>
-           <div class="list-top-movie-item-info">
-            <span class="list-top-movie-item-vn">
-             Marcella (Phần 1)
-            </span>
-            <span class="list-top-movie-item-en">
-             Marcella (Season 1)
+             Đông Cung Tây Lược
             </span>
             <span class="list-top-movie-item-view">
              1 lượt xem
@@ -1843,21 +1821,21 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/ong-anh-troi-danh" title="Ông Anh Trời Đánh">
+          <a class="list-top-movie-link" href="/phim-moi/nhung-ga-trai-hu-choi-hay-bi-xoi" title="Những Gã Trai Hư: Chơi Hay Bị Xơi">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/ong-anh-troi-danh-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/nhung-ga-trai-hu-choi-hay-bi-xoi-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Ông Anh Trời Đánh
+             Những Gã Trai Hư: Chơi Hay Bị Xơi
             </span>
             <span class="list-top-movie-item-en">
-             Brother Of The Year
+             Bad Boys: Ride or Die
             </span>
             <span class="list-top-movie-item-view">
-             3 lượt xem
+             5 lượt xem
             </span>
             <span class="rate-vote rate-vote-0">
             </span>
@@ -1865,21 +1843,43 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/chang-trai-nam-ay" title="Chàng trai năm ấy">
+          <a class="list-top-movie-link" href="/phim-moi/phu-thuy-grump-va-vuong-quoc-sac-mau" title="Phù Thủy Grump và Vương Quốc Sắc Màu">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/chang-trai-nam-ay-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/phu-thuy-grump-va-vuong-quoc-sac-mau-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Chàng trai năm ấy
+             Phù Thủy Grump và Vương Quốc Sắc Màu
             </span>
             <span class="list-top-movie-item-en">
-             Dandelion
+             A Wizard's Tale
             </span>
             <span class="list-top-movie-item-view">
              1 lượt xem
+            </span>
+            <span class="rate-vote rate-vote-0">
+            </span>
+           </div>
+          </a>
+         </li>
+         <li class="list-top-movie-item" id="list-top-movie-item-1">
+          <a class="list-top-movie-link" href="/phim-moi/vuot-qua-ca-vu-tru" title="Vượt qua cả vũ trụ">
+           <span class="status">
+            HD Vietsub
+           </span>
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/vuot-qua-ca-vu-tru-thumb.jpg')">
+           </div>
+           <div class="list-top-movie-item-info">
+            <span class="list-top-movie-item-vn">
+             Vượt qua cả vũ trụ
+            </span>
+            <span class="list-top-movie-item-en">
+             Beyond the Universe
+            </span>
+            <span class="list-top-movie-item-view">
+             3 lượt xem
             </span>
             <span class="rate-vote rate-vote-0">
             </span>
