add new website from server na

--- a/xem-phim-bo/phat-thanh-vien-thanh-that/index.html
+++ b/xem-phim-bo/phat-thanh-vien-thanh-that/index.html
@@ -1187,7 +1187,7 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
              Lượt xem:
             </dt>
             <dd class="movie-dd">
-             1
+             2
             </dd>
             <br/>
            </dl>
@@ -1777,21 +1777,21 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
        <div class="right-box-content">
         <ul class="list-top-movie" id="list-top-film-week">
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/mot-giac-mo-danh-bac" title="Một giấc mơ đánh bạc">
+          <a class="list-top-movie-link" href="/phim-moi/ronaldo" title="Ronaldo">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/mot-giac-mo-danh-bac-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/ronaldo-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Một giấc mơ đánh bạc
+             Ronaldo
             </span>
             <span class="list-top-movie-item-en">
-             A Gamble Dream
+             Ronaldo
             </span>
             <span class="list-top-movie-item-view">
-             1 lượt xem
+             2 lượt xem
             </span>
             <span class="rate-vote rate-vote-0">
             </span>
@@ -1799,21 +1799,21 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/khach-san-nhu-mon-phan" title="Khách Sạn Nhử Môn Phần">
+          <a class="list-top-movie-link" href="/phim-moi/cuoc-chien-ban-sao" title="Cuộc Chiến Bản Sao">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/khach-san-nhu-mon-phan-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/cuoc-chien-ban-sao-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Khách Sạn Nhử Môn Phần
+             Cuộc Chiến Bản Sao
             </span>
             <span class="list-top-movie-item-en">
-             Hu Men Inn
+             Recreator
             </span>
             <span class="list-top-movie-item-view">
-             1 lượt xem
+             2 lượt xem
             </span>
             <span class="rate-vote rate-vote-0">
             </span>
@@ -1821,18 +1821,18 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/phong-thuy" title="Phong Thủy">
+          <a class="list-top-movie-link" href="/phim-moi/vu-am-sat-nguoc-thoi-gian" title="Vụ Ám Sát Ngược Thời Gian">
            <span class="status">
             HD Thuyết Minh
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/phong-thuy-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/vu-am-sat-nguoc-thoi-gian-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Phong Thủy
+             Vụ Ám Sát Ngược Thời Gian
             </span>
             <span class="list-top-movie-item-en">
-             Fengshui
+             Assassin 33 A.D.
             </span>
             <span class="list-top-movie-item-view">
              2 lượt xem
@@ -1843,21 +1843,21 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/khoa-trai" title="Khóa Trái">
+          <a class="list-top-movie-link" href="/phim-moi/them-mot-lan-nua" title="Thêm Một Lần Nữa">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/khoa-trai-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/them-mot-lan-nua-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Khóa Trái
+             Thêm Một Lần Nữa
             </span>
             <span class="list-top-movie-item-en">
-             Locked In
+             Once Again
             </span>
             <span class="list-top-movie-item-view">
-             1 lượt xem
+             2 lượt xem
             </span>
             <span class="rate-vote rate-vote-0">
             </span>
@@ -1865,21 +1865,21 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/bay-vien-ngoc-rong-z-broly-sieu-saiyan-huyen-thoai" title="Bảy Viên Ngọc Rồng Z: Broly – Siêu Saiyan Huyền Thoại">
+          <a class="list-top-movie-link" href="/phim-moi/bang-dang-tokyo" title="Băng Đảng Tokyo">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/bay-vien-ngoc-rong-z-broly-sieu-saiyan-huyen-thoai-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/bang-dang-tokyo-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Bảy Viên Ngọc Rồng Z: Broly – Siêu Saiyan Huyền Thoại
+             Băng Đảng Tokyo
             </span>
             <span class="list-top-movie-item-en">
-             Dragon Ball Z Broly – The Legendary Super Saiyan
+             Tokyo Tribe
             </span>
             <span class="list-top-movie-item-view">
-             2 lượt xem
+             3 lượt xem
             </span>
             <span class="rate-vote rate-vote-0">
             </span>
