add new website from server na

--- a/xem-phim-bo/ho-yeu-tieu-hong-nuong-nguyet-hong-thien/index.html
+++ b/xem-phim-bo/ho-yeu-tieu-hong-nuong-nguyet-hong-thien/index.html
@@ -1201,7 +1201,7 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
              Lượt xem:
             </dt>
             <dd class="movie-dd">
-             1
+             2
             </dd>
             <br/>
            </dl>
@@ -1725,18 +1725,18 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
        <div class="right-box-content">
         <ul class="list-top-movie" id="list-top-film-week">
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/co-be-kieu-ky-do-suc" title="Cô bé kiêu kỳ đọ sức">
+          <a class="list-top-movie-link" href="/phim-moi/gai-thu-6" title="Gái Thứ 6">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/co-be-kieu-ky-do-suc-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/gai-thu-6-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Cô bé kiêu kỳ đọ sức
+             Gái Thứ 6
             </span>
             <span class="list-top-movie-item-en">
-             Wrestle for Love
+             Girl Friday
             </span>
             <span class="list-top-movie-item-view">
              3 lượt xem
@@ -1747,40 +1747,18 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/toi-la-nguoi-linh" title="Tôi Là Người Lính">
+          <a class="list-top-movie-link" href="/phim-moi/chuyen-tinh-nangthip" title="Chuyện Tình Nangthip">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/toi-la-nguoi-linh-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/chuyen-tinh-nangthip-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Tôi Là Người Lính
+             Chuyện Tình Nangthip
             </span>
             <span class="list-top-movie-item-en">
-             I Am Soldier
-            </span>
-            <span class="list-top-movie-item-view">
-             1 lượt xem
-            </span>
-            <span class="rate-vote rate-vote-0">
-            </span>
-           </div>
-          </a>
-         </li>
-         <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/quy-am-iii" title="Quỷ ám III">
-           <span class="status">
-            HD Vietsub
-           </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/quy-am-iii-thumb.jpg')">
-           </div>
-           <div class="list-top-movie-item-info">
-            <span class="list-top-movie-item-vn">
-             Quỷ ám III
-            </span>
-            <span class="list-top-movie-item-en">
-             The Exorcist 3
+             Nang Eye
             </span>
             <span class="list-top-movie-item-view">
              3 lượt xem
@@ -1791,18 +1769,18 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/ngoi-nha-ma-am-cua-undertaker" title="Ngôi nhà ma ám của Undertaker">
+          <a class="list-top-movie-link" href="/phim-moi/doi-dac-nhiem-phan-5" title="Đội Đặc Nhiệm (Phần 5)">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/ngoi-nha-ma-am-cua-undertaker-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/doi-dac-nhiem-phan-5-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Ngôi nhà ma ám của Undertaker
+             Đội Đặc Nhiệm (Phần 5)
             </span>
             <span class="list-top-movie-item-en">
-             Escape The Undertaker
+             SEAL Team (Season 5)
             </span>
             <span class="list-top-movie-item-view">
              2 lượt xem
@@ -1813,18 +1791,40 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/cuu-chuoc-tam-linh" title="Cứu chuộc tâm linh">
+          <a class="list-top-movie-link" href="/phim-moi/cuu-toi-oi-ma-oi" title="Cứu tôi! Ôi ma ơi">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/cuu-chuoc-tam-linh-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/cuu-toi-oi-ma-oi-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Cứu chuộc tâm linh
+             Cứu tôi! Ôi ma ơi
             </span>
             <span class="list-top-movie-item-en">
-             The Redemption
+             Help me! Oh My Ghost
+            </span>
+            <span class="list-top-movie-item-view">
+             4 lượt xem
+            </span>
+            <span class="rate-vote rate-vote-0">
+            </span>
+           </div>
+          </a>
+         </li>
+         <li class="list-top-movie-item" id="list-top-movie-item-1">
+          <a class="list-top-movie-link" href="/phim-moi/nguoi-dep-ngu-me" title="Người Đẹp Ngủ Mê">
+           <span class="status">
+            HD Vietsub
+           </span>
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/nguoi-dep-ngu-me-thumb.jpg')">
+           </div>
+           <div class="list-top-movie-item-info">
+            <span class="list-top-movie-item-vn">
+             Người Đẹp Ngủ Mê
+            </span>
+            <span class="list-top-movie-item-en">
+             Sleeping Beauty
             </span>
             <span class="list-top-movie-item-view">
              2 lượt xem
