add new website from server na

--- a/xem-phim-bo/lieu-diep-trich-tinh-than/index.html
+++ b/xem-phim-bo/lieu-diep-trich-tinh-than/index.html
@@ -1193,7 +1193,7 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
              Lượt xem:
             </dt>
             <dd class="movie-dd">
-             1
+             2
             </dd>
             <br/>
            </dl>
@@ -1663,18 +1663,18 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
        <div class="right-box-content">
         <ul class="list-top-movie" id="list-top-film-week">
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/tim-kiem-john-gissing" title="Tìm Kiếm John Gissing">
+          <a class="list-top-movie-link" href="/phim-moi/cho-em-gan-anh-them-chut-nua" title="Cho EM gần ANH thêm chút nữa">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/tim-kiem-john-gissing-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/cho-em-gan-anh-them-chut-nua-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Tìm Kiếm John Gissing
+             Cho EM gần ANH thêm chút nữa
             </span>
             <span class="list-top-movie-item-en">
-             Search For John Gissing
+             Diary of Fireflies
             </span>
             <span class="list-top-movie-item-view">
              2 lượt xem
@@ -1685,18 +1685,18 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/pham-chat-quy-ong" title="Phẩm Chất Quý Ông">
+          <a class="list-top-movie-link" href="/phim-moi/khong-tot-cho-suc-khoe" title="(Không) Tốt cho sức khỏe">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/pham-chat-quy-ong-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/khong-tot-cho-suc-khoe-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Phẩm Chất Quý Ông
+             (Không) Tốt cho sức khỏe
             </span>
             <span class="list-top-movie-item-en">
-             A Gentleman's Dignity
+             (Un)Well
             </span>
             <span class="list-top-movie-item-view">
              1 lượt xem
@@ -1707,40 +1707,18 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/sarah-cooper-moi-thu-deu-on" title="Sarah Cooper: Mọi thứ đều ổn">
+          <a class="list-top-movie-link" href="/phim-moi/chi-la-giac-mong-giang-ho" title="Chỉ Là Giấc Mộng Giang Hồ">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/sarah-cooper-moi-thu-deu-on-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/chi-la-giac-mong-giang-ho-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Sarah Cooper: Mọi thứ đều ổn
+             Chỉ Là Giấc Mộng Giang Hồ
             </span>
             <span class="list-top-movie-item-en">
-             Sarah Cooper: Everything's Fine
-            </span>
-            <span class="list-top-movie-item-view">
-             3 lượt xem
-            </span>
-            <span class="rate-vote rate-vote-0">
-            </span>
-           </div>
-          </a>
-         </li>
-         <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/a-thousand-cuts" title="A Thousand Cuts">
-           <span class="status">
-            HD Vietsub
-           </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/a-thousand-cuts-thumb.jpg')">
-           </div>
-           <div class="list-top-movie-item-info">
-            <span class="list-top-movie-item-vn">
-             A Thousand Cuts
-            </span>
-            <span class="list-top-movie-item-en">
-             A Thousand Cuts
+             Love and Sword
             </span>
             <span class="list-top-movie-item-view">
              2 lượt xem
@@ -1751,18 +1729,40 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/long-ruoi" title="Long Ruồi">
+          <a class="list-top-movie-link" href="/phim-moi/tuong-tay-quy-su" title="Tương Tây Quỷ Sự">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/long-ruoi-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/tuong-tay-quy-su-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Long Ruồi
+             Tương Tây Quỷ Sự
             </span>
             <span class="list-top-movie-item-en">
-             The Big Boss
+             Strange Things in Western Hunan
+            </span>
+            <span class="list-top-movie-item-view">
+             4 lượt xem
+            </span>
+            <span class="rate-vote rate-vote-0">
+            </span>
+           </div>
+          </a>
+         </li>
+         <li class="list-top-movie-item" id="list-top-movie-item-1">
+          <a class="list-top-movie-link" href="/phim-moi/chuyen-ma-am-o-can-nha-ho-hill" title="Chuyện ma ám ở căn nhà họ Hill">
+           <span class="status">
+            HD Vietsub
+           </span>
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/chuyen-ma-am-o-can-nha-ho-hill-thumb.jpg')">
+           </div>
+           <div class="list-top-movie-item-info">
+            <span class="list-top-movie-item-vn">
+             Chuyện ma ám ở căn nhà họ Hill
+            </span>
+            <span class="list-top-movie-item-en">
+             The Haunting of Hill House
             </span>
             <span class="list-top-movie-item-view">
              2 lượt xem
